--- a/frontend/src/assets/styles/custom.scss
+++ b/frontend/src/assets/styles/custom.scss
@@ -6,6 +6,7 @@ body {
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
+            color: black;
         }
     }
 }
